<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgUdacity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/udacity" />

    <Button
        android:id="@+id/btnPrimary"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/btn_primary_txt"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txtDiscover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnPrimary"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/txt_discover"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtDiscover"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/business_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_name"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:id="@+id/layoutAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/business_name"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/imgAddress"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/address_ico" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="map"
                android:paddingLeft="16dp"
                android:text="@string/business_address"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutAddress"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/imgPhone"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/phone_ico" />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:paddingLeft="16dp"
                android:text="@string/business_phone"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutPhone"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/imgWebsite"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/url_ico" />

            <TextView
                android:id="@+id/txtWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingLeft="16dp"
                android:text="@string/business_website"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>